# metal-flux-db

./: .graphifyignore  README.md  TODO.md  pyproject.toml
configs/: analytes.yaml  matrix_taxonomy.yaml  source_catalog.yaml  unit_mappings.yaml
data/curated/parquet/: linkage_edges.parquet  measurements_normalized.parquet  measurements_raw.parquet  review_queue.parquet  samples.parquet  source_files.parquet  sources.parquet  studies_or_batches.parquet
data/curated/qa/: basis_preservation_report.parquet  duplicate_candidate_report.parquet  (+5 more)
docs/: normalization_rules.md  provenance_model.md
docs/source_notes/: README.md  cadmium_expansion_sources.md
graphify-out/: .graphify_python  GRAPH_REPORT.md  graph.html  graph.json
graphify-out/converted/: metals-exposure-data_4e8813d6.md
graphify-out/wiki/: BaseAdapter.md  Core_Code.md  Data_Models.md  Data_Models_2.md  LiteratureSearchAdapter.md  ParsedPayload.md  Pipeline_And_CLI.md  QA_And_Tests.md  QA_And_Tests_2.md  QA_And_Tests_3.md  QA_And_Tests_4.md  Source_Adapters.md  Source_Adapters_2.md  Source_Adapters_3.md  Source_Adapters_4.md  Source_Adapters_5.md  Source_Adapters_6.md  StudyRecord.md  Views_And_Plots.md  Views_And_Plots_2.md  Water_Ingestion.md  build_basic_plots().md  fetch_sources().md  index.md  initialize_catalog_tables().md  normalize_measurement().md  parse_sources().md  read_duckdb_table().md  stable_id().md
notebooks/: exploration.ipynb
src/cadmium_lake/: cli.py  config.py  io.py  logging.py  paths.py  pipeline.py  utils.py
tests/: conftest.py  test_cli.py  test_pipeline.py  test_units.py
(+50 files in other folders)
